--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.5",
-    "@astrojs/vercel": "^7.3.5",
-    "@vercel/analytics": "^1.2.2",
+    "@astrojs/check": "0.5.5",
+    "@astrojs/vercel": "7.3.5",
+    "@vercel/analytics": "1.2.2",
     "astro": "4.3.2",
     "hotkeypad": "0.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   }
 }
